2005-06-15  Marc Singer  <elf@buici.com>

	* src/apex/command.c (exec_monitor): Adding configuration option
	to sort commands for the sake of better help.

	* src/apex/cmd-xreceive.c: Revising help text.

2005-06-14  Marc Singer  <elf@buici.com>

	* src/drivers/driver.c (parse_descriptor): Fixed the driver parser
	dependency on the filesystem drivers.

	* src/drivers/drv-fat.c (fat_read): Region length calc, again.

	* src/drivers/drv-ext2.c (ext2_read): Fixed the region length
	calcs.

	* src/drivers/drv-jffs2.c (jffs2_open): Fixed some of the region
	length calcs.

2005-06-13  Marc Singer  <elf@buici.com>

	* src/drivers/drv-jffs2.c (jffs2_path_to_inode): Needed to
	invalidate the cached block after chasing links.
	(find_cached_inode): Enhanced find_cached_inode() to accept an
	offset within the file.  This may improve the performance of
	reading since it doesn't have to scan the inode list from the top
	every time.  Moreover, the algorithm of the find_cached_inode
	function is more efficient for larget files.
	(jffs2_load_cache): Changed the logic for handling reversed
	markers.  The previous code would prematurely terminate if a
	reversed marker was found among the filesystem detritus. 
	(jffs2_load_cache): Added a CRC check for inodes.
	(jffs2_path_to_inode): Added a CRC check for filenames.

2005-06-12  Marc Singer  <elf@buici.com>

	* src/apex/cmd-info.c: New command to query information about a
	region from a driver.  It's used by the jffs2 driver to show the
	contents of a directory.  Other filesystems ought to follow suit.
    
	* src/drivers/drv-jffs2.c: New jffs2 reading filesystem driver.

2005-05-15  Marc Singer  <elf@buici.com>

	* src/mach-ixp42x/pci.c (pci_init): Added IRQ setup for all of the
	PCI interrupt pins.
	
2005-05-15  Marc Singer  <elf@cerise.buici.com>

	* src/lib/spinner.c (spinner_clear): clearing LED spinner when the
	user enters a command prompt.
 
	* src/mach-ixp42x/pci.c (pci_init): Proper PCI initialization